<resources>
    <string name="app_name">Only Friends</string>
    <string name="default_text">default_text</string>

    <!-- Bottom Navigation -->
    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_collection_item">Collection</string>
    <string name="bottom_add_gift_item">Ajouter</string>
    <string name="bottom_profile_item">Profil</string>

    <!-- Home page -->
    <string name="home_page_title">A découvrir</string>
    <string name="home_page_last_gilt_section">Dernières cadeaux</string>
    <string name="item_gift_name">Nom du cadeau</string>
    <string name="item_plant_name">Description du cadeau</string>
    <string name="popup_gift_description_title">Description</string>
    <string name="popup_gift_description_subtitle">Description du cadeau</string>
    <string name="popup_gift_price_title">Prix</string>
    <string name="popup_gift_price_subtitle">\?? ??? €</string>
    <string name="popup_gift_other_title">Autre</string>
    <string name="popup_gift_other_subtitle">Autre infos</string>
    <string name="add_gift_page_upload_button">CHARGER IMAGE</string>
    <string name="add_gift_page_upload_new_name">Nom du cadeau</string>
    <string name="add_gift_page_upload_new_description">Description du cadeau</string>
    <string name="add_gift_page_upload_new_price">Prix du cadeau</string>
    <string name="add_gift_page_upload_new_other">Autre information</string>
    <string name="add_gift_page_save_button">CONFIRMER</string>
    <string name="collection_page_title">Ma collection</string>
    <string name="add_gift_page_title">Ajout d\'un cadeau</string>


    <!-- Profile page -->
    <string name="profile_page_title">Profil</string>
    <string name="edit_profile"> Modifier Profil</string>
    <string name="info_user">text view</string>
    <string name="info_user_name">  Nom : </string>
    <string name="info_user_lastname">  Prenom : </string>
    <string name="info_user_age">  Age : </string>
    <string name="info_user_email">  Gmail : </string>
    <string name="info_user_phone">  Téléphone : </string>
    <string name="save_profile">Sauvegarder</string>



</resources>