<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_gift_page_upload_button"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:padding="@dimen/default_margin"
            style="@style/TitleTextStyle"/>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image"/>

    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_gift_page_upload_new_name"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_gift_page_upload_new_description"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/price_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_gift_page_upload_new_price"
        android:paddingLeft="@dimen/default_margin"
        android:inputType="number"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/other_input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_gift_page_upload_new_other"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"/>

    <Button
        android:id="@+id/create_gift_create_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/blue"
        android:text="@string/add_gift_page_save_button"
        android:textColor="@color/white"
        style="@style/TitleTextStyle"
        />



</LinearLayout>