<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:padding="15dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_gift_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_gift_name"
        style="@style/DefaultTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginLeft="@dimen/default_margin"/>

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginRight="@dimen/default_margin"/>

    <TextView
        android:id="@+id/popup_gift_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/popup_gift_description_title"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_gift_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_gift_description_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_gift_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_gift_description_title"
        style="@style/LightTextStyle"/>

    <TextView
        android:id="@+id/popup_gift_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_gift_price_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_gift_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_gift_description_subtitle"
        style="@style/TitleTextStyle"/>

    <TextView
        android:id="@+id/popup_gift_price_subtitle"
        style="@style/LightTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_gift_price_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_gift_price_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_gift_price_title" />


    <TextView
        android:id="@+id/popup_gift_other_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_gift_other_title"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="@+id/popup_gift_price_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_gift_price_subtitle" />

    <TextView
        android:id="@+id/popup_gift_other_subtitle"
        style="@style/LightTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_gift_other_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_gift_other_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_gift_other_title" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_gift_other_subtitle"/>


    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_trash"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"
        app:tint="@color/black"/>

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unstar"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_separation"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="@+id/view_separation"
        app:tint="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>