<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="411dp"
                android:layout_height="731dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="460dp"
                    android:background="@drawable/top_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/return_button_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/keyboard_backspace"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="182dp"
                    android:layout_height="177dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profil_page"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profil_page" />

                <TextView
                    android:id="@+id/top_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_user"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/top_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_user"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/top_email"
                    app:layout_constraintStart_toStartOf="@+id/top_email"
                    app:layout_constraintTop_toBottomOf="@+id/top_email" />

                <LinearLayout
                    android:layout_width="364dp"
                    android:layout_height="387dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="124dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/white_background"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_name"
                    app:layout_constraintVertical_bias="1.0">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editName"
                            android:layout_width="38dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="@dimen/item_margin"
                            android:layout_marginStart="@dimen/item_padding_profile"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="@string/info_user_name"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editLastName"
                            android:layout_marginTop="@dimen/item_margin"
                            android:layout_width="41dp"
                            android:layout_height="45dp"
                            android:layout_marginStart="@dimen/item_padding_profile"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="@string/info_user_lastname"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editEmail"
                            android:layout_width="41dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="@dimen/item_margin"
                            android:layout_marginStart="@dimen/item_padding_profile"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="@string/info_user_email"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editAge"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_marginTop="@dimen/item_margin"
                            android:layout_marginStart="@dimen/item_padding_profile"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="@string/info_user_age"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editPhoneNumber"
                            android:layout_width="40dp"
                            android:layout_height="44dp"
                            android:layout_marginTop="@dimen/item_margin"
                            android:layout_marginStart="@dimen/item_padding_profile"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:hint="@string/info_user_phone"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/saveProfileButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:text="@string/save_profile"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/mid_blue" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>