<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:background="@drawable/top_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/circle_background"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profil_page"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profil_page" />

                <TextView
                    android:id="@+id/top_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/info_user"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/top_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_user"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/top_email"
                    app:layout_constraintStart_toStartOf="@+id/top_email"
                    app:layout_constraintTop_toBottomOf="@+id/top_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/white_background"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_name">

                    <Button
                        android:id="@+id/button_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:text="@string/edit_profile"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/mid_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/NameView"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user_name"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/ShowNameView"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/separatorTop"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/profile_view"
                        tools:layout_marginEnd="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/LastnameView"
                            android:layout_width="57dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user_lastname"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/showLastnameView"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/separatorMiddle"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/profile_view"
                        tools:layout_marginEnd="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/MailView"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user_email"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/showMailView"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:id="@+id/separatorBottom"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/profile_view"
                        tools:layout_marginEnd="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ageView"
                            android:layout_width="59dp"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user_age"
                            android:textColor="@color/profile_text"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/oldMailView"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/info_user"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navigation_view"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/light_blue"
                app:itemIconTint="@drawable/bottom_nav_color"
                app:itemTextColor="@drawable/bottom_nav_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_navigation_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>